--- a/assets/css/cotizador.css
+++ b/assets/css/cotizador.css
@@ -33,7 +33,7 @@ body {
   transform: rotate(180deg);
   z-index: 0;
   margin-bottom: 50px;
-
+  border: solid 8px #d9d9d9;
   z-index: 0;
 }
 
@@ -52,9 +52,6 @@ body {
   margin-bottom: 50px;
 
   z-index: -1;
-}
-
-.contGranate:hover {
   filter: blur(200px);
 }
 
