--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@ body {
 }
 .toroPortada {
   width: 60rem;
+  z-index: 6;
 }
 
 .carretera {
@@ -65,7 +66,7 @@ body {
   font-family: "Poppins";
   font-style: normal;
 
-  font-size: 30px;
+  font-size: 2em;
   line-height: 40px;
   margin-top: 0px;
   margin-left: 810px;
@@ -236,7 +237,7 @@ nav ul a li:hover {
 }
 
 .info {
-  margin-top: 250px;
+  margin-top: 15rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -244,7 +245,31 @@ nav ul a li:hover {
   text-align: justify;
 }
 .camioneta:hover {
-  width: 300px;
+  @keyframes moverImagen {
+    from {
+      transform: translateX(-12, 80rem);
+    }
+    to {
+      transform: translateX(18.75rem);
+    }
+  }
+}
+
+.camioneta {
+  position: relative;
+  left: 0;
+  animation: moverImagen 2s ease-in-out infinite alternate;
+  width: 200px;
+  margin-top: 50px;
+}
+
+@keyframes moverImagen {
+  from {
+    transform: translateX(-200px);
+  }
+  to {
+    transform: translateX(400px);
+  }
 }
 
 .info {
@@ -252,29 +277,88 @@ nav ul a li:hover {
   margin-bottom: 200px;
 }
 
+.tituloInfo2 {
+  font-size: 2rem;
+  margin-left: 15.8rem;
+}
+.bienvenida {
+  align-self: flex-start;
+  font-size: 2em;
+}
 .info2 {
-  background-color: #d9d9d9;
   display: flex;
-  margin-top: 250px;
+  margin-top: 16rem;
   display: flex;
 
   justify-content: center;
   align-items: center;
 
   text-align: justify;
+  gap: 2rem;
+}
+.grupoCont {
+  display: flex;
+  gap: 100px;
+  transform: rotate(-190deg);
+  z-index: -2;
+
+  position: absolute;
+}
+.contFondo {
+  background-color: #d9d9d9;
+
+  width: 20rem;
+  height: 35rem;
 }
 
 .repartidor {
   width: 450px;
   margin-left: 150px;
+  align-self: flex-start;
 }
 .logoCaja {
   position: absolute;
-  left: 280px;
+  left: 25rem;
   margin-top: 250px;
 }
 .servper {
-  margin: 150px;
+  margin-top: 2rem;
+  width: 500px;
+  font-weight: 500;
+}
+
+.contenedorGrid {
+  margin-top: 200px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas:
+    "contA contB contC"
+    "contD contB contE";
+
+  padding: 2rem;
+}
+
+.contA {
+  grid-area: contA;
+}
+
+.contB {
+  grid-area: contB;
+  display: flex;
+  justify-content: center;
+}
+
+.contC {
+  grid-area: contC;
+}
+
+.contD {
+  grid-area: contD;
+}
+
+.contE {
+  grid-area: contE;
 }
 
 /* RESPONSIVE */
@@ -290,6 +374,11 @@ nav ul a li:hover {
     border-radius: 50px;
   }
 
+  .logoCaja {
+    position: absolute;
+    left: 33rem;
+    margin-top: 250px;
+  }
   .contenedorBanner {
     position: absolute;
     z-index: 0;
@@ -431,7 +520,7 @@ nav ul a li:hover {
   }
   .servper {
     margin: 0;
-    font-size: 16px;
+    font-size: 1rem;
   }
   .carrusel {
     display: none;
