--- a/admin/styles/globals.css
+++ b/admin/styles/globals.css
@@ -1,6 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap");
 body {
-  background-color: #d9d9d9;
   color: black;
+  font-family: "Poppins" sans-serif;
+  background-color: white;
 }
 
 a {
@@ -15,21 +21,22 @@ a {
 }
 #formCotizador {
   position: absolute;
-  top: 23rem;
+  top: 15rem;
   margin-left: 300px;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
   z-index: 1;
   color: black;
+  left: 29rem;
 }
 
 .contGris {
   position: absolute;
-  width: 1002px;
-  height: 300px;
+  width: 30rem;
+  height: 17rem;
   right: 9rem;
-  top: 22rem;
+  top: 13.8rem;
   background: white;
   border-radius: 50px;
 
@@ -38,37 +45,71 @@ a {
   margin-bottom: 50px;
 
   z-index: 0;
-}
-
-.contGranate {
-  position: absolute;
-  width: 1002px;
-  height: 250px;
-  right: 10rem;
-
-  top: 20rem;
-  background: #610000;
-  border-radius: 50px;
-
-  transform: rotate(180deg);
-
-  margin-bottom: 50px;
-
-  z-index: -1;
+  border: solid 10px #d9d9d9;
 }
 
 .logoCoti {
   position: absolute;
   width: 350px;
   z-index: 1;
-  top: 180px;
+  top: 120px;
   left: 250px;
 }
 
-.logoCoti {
+.logo {
   position: absolute;
-  width: 350px;
-  z-index: 1;
-  top: 180px;
-  left: 350px;
+  left: 200px;
+  top: 20px;
+}
+
+.tabla {
+  margin-left: 100px;
+  font-size: 1em;
+  margin-top: 2rem;
+  border: solid 5px #d9d9d9;
+  border-radius: 5px;
+  margin-top: 0px;
+}
+
+.titulo1 {
+  text-align: center;
+  color: black;
+}
+.agregar {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 10px;
+}
+
+.tituloTabla {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.logoNav {
+  font-weight: 600;
+  margin-left: 0;
+  align-self: flex-start;
+}
+#menuLogin {
+  margin-left: auto;
+}
+.nav1 {
+  display: flex;
+
+  align-items: center;
+  justify-content: space-around;
+  margin-right: 27rem;
+
+  margin-bottom: 50px;
+}
+.listaNav {
+  display: flex;
+  gap: 100px;
+}
+
+li {
+  list-style: none;
 }
