--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -42,14 +42,15 @@ form {
   border-radius: 20px;
   display: flex;
   margin-top: 50px;
-  height: 500px;
+  height: 480px;
 
   background-color: white;
   z-index: 1;
+  border: solid 5px #d9d9d9;
 }
 
 .contForm2 {
-  width: 620px;
+  width: 40rem;
   position: absolute;
   height: 627px;
   background-color: #610000;
@@ -57,4 +58,5 @@ form {
   border-radius: 20px;
   left: 350px;
   top: 20px;
+  filter: blur(300px);
 }
