--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,12 @@ body {
 }
 .toroPortada {
   width: 60rem;
-  z-index: 6;
+  z-index: 2;
+  transition: 0.5s ease;
+}
+
+.toroPortada:hover {
+  filter: drop-shadow(5px 5px 20px black);
 }
 
 .carretera {
@@ -57,6 +62,7 @@ body {
 
   width: 550px;
   margin-bottom: 0px;
+  transition: 1s ease;
 }
 .tituloBanner:hover {
   text-shadow: 0 0 10px white, 0 0 10px white, 0 0 40px white;
@@ -115,10 +121,13 @@ body {
   margin-top: 10px;
 }
 
+li {
+  list-style: none;
+}
 .footer-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
   background-color: white;
   color: black;
 
@@ -135,7 +144,7 @@ body {
   width: 50%;
   border-left: none;
   border-radius: 5px;
-  text-align: right;
+  text-align: end;
 }
 
 .footer-left {
@@ -315,7 +324,13 @@ nav ul a li:hover {
   width: 450px;
   margin-left: 150px;
   align-self: flex-start;
+  transition: 0.5s ease;
 }
+
+.repartidor:hover {
+  filter: drop-shadow(5px 5px 20px #610000);
+}
+
 .logoCaja {
   position: absolute;
   left: 25rem;
@@ -328,6 +343,7 @@ nav ul a li:hover {
 }
 
 .contenedorGrid {
+  margin: 150px;
   margin-top: 200px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -376,7 +392,7 @@ nav ul a li:hover {
 
   .logoCaja {
     position: absolute;
-    left: 33rem;
+    left: 32rem;
     margin-top: 250px;
   }
   .contenedorBanner {
@@ -410,40 +426,37 @@ nav ul a li:hover {
     margin-top: 100px;
   }
 }
+/* /////////////////////////////////////////////////////////////////////////// 375 */
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 500px) {
+}
+
+@media screen and (max-width: 420px) {
   * {
     margin: 0;
+    padding: 0;
+    margin-left: 10px;
+    margin-right: 10px;
   }
   .nav1 {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
+  a {
+    height: 50px;
+  }
+
   .contGris {
     display: none;
-    position: absolute;
-    width: 100%;
-
-    left: 0px;
-    top: 500px;
-    background: #d9d9d9;
-    border-radius: 0;
-
     z-index: -2;
     margin-bottom: 500px;
   }
   .toroPortada {
-    width: 24rem;
+    width: 22rem;
+    margin-bottom: 1px;
   }
 
-  .info {
-    margin-bottom: 200px;
-    margin-top: 400px;
-    width: 100%;
-    margin-left: 2px;
-    margin-right: 0px;
-  }
   .camioneta {
     width: 150px;
   }
@@ -453,8 +466,9 @@ nav ul a li:hover {
   .contenedorBanner {
     position: absolute;
     z-index: 0;
-
+    right: 60px;
     top: 650px;
+    margin-bottom: 1000px;
   }
 
   .tituloBanner {
@@ -463,12 +477,9 @@ nav ul a li:hover {
 
     font-size: 40px;
     line-height: 30px;
-    color: white;
-
-    margin-left: 800px;
+    color: black;
 
     width: 200px;
-    margin-bottom: 0px;
   }
   .tituloBanner:hover {
     text-shadow: 0 0 10px white, 0 0 10px white, 0 0 40px white;
@@ -492,14 +503,14 @@ nav ul a li:hover {
 
   #menuLogin {
     position: absolute;
-
-    top: 350px;
+    top: 15rem;
+    margin-left: 2rem;
   }
 
   .cotizar {
     bottom: 350px;
     top: 900px;
-    right: 120px;
+    right: 100px;
   }
 
   info2 {
@@ -512,16 +523,53 @@ nav ul a li:hover {
     width: 300px;
   }
 
+  .info {
+    margin-top: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: justify;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 200px;
+  }
+
+  .contenedorGrid {
+    margin-top: 200px;
+    display: flex;
+    flex-direction: column;
+
+    padding: 2rem;
+  }
+
   .repartidor {
     display: none;
   }
+
   .logoCaja {
     display: none;
   }
   .servper {
-    margin: 0;
     font-size: 1rem;
   }
+
+  .grupoCont {
+    display: flex;
+    gap: 3px;
+    transform: rotate(-190deg);
+    z-index: -2;
+
+    position: absolute;
+  }
+  .contFondo {
+    background-color: #d9d9d9;
+
+    width: 4rem;
+    height: 20rem;
+  }
+
   .carrusel {
     display: none;
   }
@@ -532,35 +580,130 @@ nav ul a li:hover {
   }
   .card {
     margin-bottom: 300px;
-    margin-left: 35px;
+  }
+
+  .camioneta {
+    position: relative;
+    left: 0;
+    animation: moverImagen 2s ease-in-out infinite alternate;
+    width: 200px;
+    margin-top: 50px;
+  }
+
+  @keyframes moverImagen {
+    from {
+      transform: translateX(-80px);
+    }
+    to {
+      transform: translateX(50px);
+    }
+  }
+
+  .tituloInfo2 {
+    font-size: 1em;
+
+    margin-left: 0;
+  }
+  .bienvenida {
+    align-self: flex-start;
+    font-size: 1em;
+  }
+  .info2 {
+    display: flex;
+    margin-top: 16rem;
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+
+    text-align: justify;
+    gap: 2rem;
   }
 
   #logo {
-    width: 90px;
+    width: 100px;
 
     margin-top: 10px;
+    margin: 0;
   }
 
   .footer-container {
-    display: flex;
+    margin: 0;
+    background-color: #d9d9d9;
+    margin-top: 80px;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    color: black;
+  }
 
-    bottom: 0;
-    width: 100%;
+  .footer-container li {
+    text-align: start;
+    font-size: medium;
   }
 
   .footer-right {
     border-left: none;
     border-radius: 5px;
-    text-align: right;
+
+    background-color: #d9d9d9;
+    display: flex;
+    width: 200px;
   }
 
   .footer-left {
     background-color: white;
 
     border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 0px;
+  }
+
+  .footer-right {
+    padding-right: 0px;
+
+    width: 50%;
+    border-left: none;
+    border-radius: 5px;
+    text-align: end;
+  }
+
+  .footer-left {
+    padding-left: 0px;
+    background-color: gainsboro;
+    width: 50%;
+    border-radius: 5px;
   }
 }
+
+/* .contenedorGrid {
+  margin-top: 200px;
+  display: flex;
+  flex-direction: column;
+
+  padding: 2rem;
+} */
+
+/* .footer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: black;
+
+  bottom: 0;
+  width: 100%;
+}
+
+.footer-right {
+  border-left: none;
+  border-radius: 5px;
+  text-align: right;
+  background-color: #d9d9d9;
+}
+
+.footer-left {
+  background-color: white;
+
+  border-radius: 5px;
+} */
